# akhet

./: .gitignore  Makefile  Makefile.in  README.md  config.status  configure  configure.ac  demo-run.sh
akhet/base/firewall/: Dockerfile  run.sh  sources.list
akhet/base/image-ubuntu-16-04/: Dockerfile
akhet/base/image-ubuntu-16-04/etc/X11/: xorg.conf
akhet/base/image-ubuntu-16-04/etc/apt/: sources.list
akhet/demo/ui/: Dockerfile
akhet/demo/ui/etc/apt/: sources.list
akhet/demo/ui/opt/: init.sh
akhet/images/ubuntu-16-04-gnome/: Dockerfile  gnome.conf
akhet/images/ubuntu-16-04-gnome-cpp/: Dockerfile
akhet/images/ubuntu-16-04-gnome-geant4/: Dockerfile
akhet/images/ubuntu-16-04-gnome-r-lang/: Dockerfile
akhet/images/ubuntu-16-04-gnome-root6/: Dockerfile
akhet/images/ubuntu-16-04-plasma/: Dockerfile  plasma.conf
akhet/images/ubuntu-16-04-plasma-cpp/: Dockerfile
akhet/images/ubuntu-16-04-plasma-geant4/: Dockerfile
akhet/images/ubuntu-16-04-plasma-r-lang/: Dockerfile
akhet/images/ubuntu-16-04-plasma-root6/: Dockerfile
akhet/images/ubuntu-16-04-xterm/: Dockerfile  xterm.conf
akhet/sys/agent/: Dockerfile
akhet/sys/agent/opt/akhet-agent/: AkhetAgent.py  AkhetAgentInstanceRunner.py  app.py
akhet/sys/api/: Dockerfile
akhet/sys/base/: Dockerfile
akhet/sys/proxy/: Dockerfile
akhet/sys/proxy/etc/: dnsmasq.conf
akhet/sys/proxy/opt/: entrypoint.sh
autom4te.cache/: output.0  output.1  output.3  requests  traces.0  traces.1  traces.3
config/: akhet-agent.yml  akhet-api.yml  akhet-demo-ui.yml  akhet-proxy.yml
(+19 files in other folders)
